--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "build": "tsc",
-    "start": "node index.ts"
+    "start": "node ./dist"
   }
 }
