--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "build": "tsc",
     "start": "node ./dist"
+  }, "engines" : {
+    "node": "16.13.1"
   }
 }
