--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kek",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -19,8 +19,6 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "build": "tsc",
-    "start": "node ./dist"
-  }, "engines" : {
-    "node": "16.13.1"
+    "start": "node ./src/index.ts"
   }
 }
